Couldn't resist moving files again.

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "mediapub.tetov.xyz",
   "version": "1.0.0",
   "description": "mediapub endpoint indiekit conf",
-  "main": "index.js",
   "type": "module",
   "private": "true",
   "scripts": {
-    "start": "node -r dotenv/config --use_strict index.js",
+    "start": "node -r dotenv/config --use_strict src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anton Tetov",
