--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,8 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
+# c tags
+tags
+
+# build artefacts
+npm-shrinkwrap.json
