--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version: "14.15"
           cache: "npm"
-      - run: npm -g u npm
+      - run: npm -g up npm
       - run: npm  ci
 
   pack-and-release:
